--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ code {
 /* Login/Register */
 
 .user-form {
-  padding: 30px 50px;
+  padding: 50px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 4px;
 }
