--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ code {
   transition: 0.2s ease;
 }
 
+.collapsed {
+  display: none !important;
+}
+
 /* Pages */
 
 .page {
@@ -31,6 +35,7 @@ code {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   margin: 10px 0px;
+  min-height: 400px;
 }
 
 .listener-border {
