--- a/src/index.css
+++ b/src/index.css
@@ -36,12 +36,26 @@ code {
 
 /* Login/Register */
 
-.user-form {
+.card {
   padding: 50px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   margin: 10px 0px;
   min-height: 400px;
+}
+
+.card-fluid {
+  padding: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  margin: 10px 0px;
+}
+
+.card-fluid-sm {
+  padding: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  margin: 10px 0px;
 }
 
 .listener-border {
